# green-languages

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  test.yml
examples/: measure_examples.sh  obtain_measurements.sh  run-target-workload.sh
examples/c/: division-loop.yml  matrix-multiplication.yml  polynomial-evaluation.yml
examples/cs/: division-loop.yml  matrix-multiplication.yml  polynomial-evaluation.yml
examples/internal/c/: division-loop.yml  matrix-multiplication.yml  polynomial-evaluation.yml
examples/internal/cpp/: division-loop.yml  matrix-multiplication.yml  polynomial-evaluation.yml
examples/java/: division-loop.yml  matrix-multiplication.yml  polynomial-evaluation.yml
examples/rust/: division-loop.yml  matrix-multiplication.yaml  matrix-multiplication.yml  polynomial-evaluation.yml
iterations/: Cargo.toml  Iterations.java  iterations.h
iterations/src/: lib.rs  share.rs  signal.rs
measurements/: Cargo.toml
measurements/include/: Measurements.java  measurements.h
measurements/src/: lib.rs  share.rs  signal.rs
profiles/: i7_8700.conf  i7_8700_acpi_performance.conf  i7_8700_labmax.conf  i7_8700_labmin.conf  intel_default.conf  intel_lab.conf  intel_performance.conf  max_performance.conf
script/: __main__.py  environment.py  util.py
scripts/: profiles.sh  report.py  setups.sh
scripts/setups/: i7_8700_acpi_performance.conf  i7_8700_acpi_power.conf  i7_8700_active_performance.conf  i7_8700_active_power.conf  i7_8700_active_user.conf  i7_8700_passive_performance.conf  i7_8700_passive_power.conf  max_pstate_0.conf  min_pstate_100.conf
signals/: Cargo.toml
signals/include/: Signals.java  signals.h
signals/src/: lib.rs  signal.rs
src/: config.rs  language.rs  lib.rs  main.rs  measure.rs  profiles.sh  scenario.rs  tmp.rs
src/commands/: cli.rs  measure.rs  mod.rs  report.rs
src/core/: language.rs  mod.rs  scenario.rs  test.rs  util.rs
src/scenario/: error.rs  mod.rs  result.rs  test.rs  util.rs
(+29 files in other folders)
