[package]
name = "green-languages"
version = "0.1.0"
description = ""
authors = ["Dragoș Ionescu <mail@ionescudragos.com>"]
edition = "2024"
readme = "README.md"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
perf-event = { version = "0.4.8", path = "perf-event/perf-event" }
serde = { version = "1.0.225", features = ["derive"] }
serde_yaml = "0.9.34"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
