[package]
name = "green-languages"
version = "0.1.0"
description = ""
authors = ["Dragoș Ionescu <mail@ionescudragos.com>"]
edition = "2024"
readme = "README.md"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive"] }
perf-event = { version = "0.4.8", path = "perf-event/perf-event" }
serde = { version = "1.0.225", features = ["derive"] }
serde_yml = "0.0.12"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.16"
