[package]
name = "measurements"
version = "0.1.0"
edition = "2021"

[lib]
name = "measurements"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
jni = "0.21"
nix = { version = "0.30.1", features = ["fs", "mman"] }
once_cell = "1.21.3"

[profile.release]
opt-level = 3
debug = true
lto = true
codegen-units = 1
panic = "abort"
